--- a/index.html
+++ b/index.html
@@ -1,317 +1,323 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Snake Game - Multi Control</title>
-<style>
-body {
-  margin: 0;
-  background: #111;
-  color: #0f0;
-  font-family: 'Lato', sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  height: 100vh;
-}
-.game-canvas {
-  border: 2px solid #0f0;
-  background: #000;
-  margin-top: 20px;
-  max-width: 90vw;
-  max-height: 90vw;
-}
-.menu {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  font-size: 26px;
-  cursor: pointer;
-  user-select: none;
-}
-#userListBox {
-  position: absolute;
-  top: 50px;
-  right: 10px;
-  background: rgba(20,20,20,0.95);
-  color: #0f0;
-  border: 1px solid #0f0;
-  border-radius: 8px;
-  padding: 10px;
-  width: 220px;
-  display: none;
-  font-size: 14px;
-  box-shadow: 0 0 10px #0f0;
-}
-#userListBox ul {
-  margin: 5px 0 0;
-  padding-left: 20px;
-  max-height: 200px;
-  overflow-y: auto;
-}
-.popup {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: rgba(0,0,0,0.7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.popup-content {
-  background: #111;
-  color: #0f0;
-  border: 1px solid #0f0;
-  border-radius: 10px;
-  padding: 20px;
-  text-align: center;
-  width: 280px;
-}
-.popup-content input {
-  background: #222;
-  border: 1px solid #0f0;
-  border-radius: 5px;
-  padding: 5px;
-  color: #fff;
-  margin-bottom: 10px;
-}
-.popup-content button {
-  background: #0f0;
-  border: none;
-  padding: 8px 15px;
-  border-radius: 6px;
-  font-weight: bold;
-  cursor: pointer;
-  margin: 5px;
-}
-.popup-content button.cancel {
-  background: #f00;
-}
-.controls {
-  display: grid;
-  grid-template-columns: 70px 70px 70px;
-  grid-template-rows: 70px 70px 70px;
-  justify-content: center;
-  align-items: center;
-  margin-top: 15px;
-  gap: 10px;
-}
-.control-btn {
-  width: 70px;
-  height: 70px;
-  background: #333;
-  color: #0f0;
-  font-size: 30px;
-  border: 2px solid #0f0;
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  user-select: none;
-  cursor: pointer;
-}
-.control-btn:active {
-  background: #0a0;
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>snake game made by - nirob</title>
+  <style>
+    body {
+      margin: 0;
+      background: #222;
+      font-family: 'Lato', sans-serif;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+    }
+
+    #game-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: rgba(220, 220, 220, 0.15);
+      border-radius: 15px;
+      margin-top: 20px;
+      padding: 10px;
+    }
+
+    canvas {
+      background: #000;
+      border-radius: 15px;
+    }
+
+    .info {
+      text-align: center;
+      margin-top: 10px;
+      font-size: 18px;
+    }
+
+    .controls {
+      margin-top: 15px;
+      text-align: center;
+    }
+
+    .arr {
+      cursor: pointer;
+      width: 70px;
+      height: 70px;
+      text-align: center;
+      line-height: 65px;
+      background: gray;
+      color: white;
+      font-size: 40px;
+      border-radius: 15px;
+      margin: 5px;
+      user-select: none;
+      display: inline-block;
+      box-shadow: 0 5px #222;
+    }
+
+    .arr:active {
+      background: #555;
+      box-shadow: 0 2px #111;
+      transform: translateY(2px);
+    }
+
+    #menuBtn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 28px;
+      cursor: pointer;
+    }
+
+    #userListBox {
+      position: absolute;
+      top: 50px;
+      right: 10px;
+      background: rgba(30, 30, 30, 0.9);
+      border-radius: 10px;
+      padding: 10px;
+      display: none;
+    }
+
+    #popup {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      color: white;
+      z-index: 999;
+    }
+
+    #popup input {
+      padding: 8px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: none;
+      margin-top: 10px;
+    }
+
+    #popup button {
+      margin: 10px;
+      padding: 8px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      background: #28a745;
+      color: white;
+      cursor: pointer;
+    }
+
+    #popup button#cancelBtn {
+      background: #dc3545;
+    }
+  </style>
 </head>
 <body>
-
-<div class="menu" id="menuBtn">⋮</div>
-
-<div id="userListBox">
-  <div><b>👥 Players List</b></div>
-  <div>Total Players: <span id="userCount">0</span></div>
-  <ul id="userList"></ul>
-</div>
-
-<div class="popup" id="popup">
-  <div class="popup-content">
-    <h3>🎮 Start Snake Game?</h3>
-    <p>Press “Agree” to join and play.</p>
-    <input type="text" id="usernameInput" placeholder="Enter username (optional)">
-    <br>
-    <button id="agreeBtn">Agree</button>
-    <button class="cancel" id="cancelBtn">Cancel</button>
+  <div id="menuBtn">⋮</div>
+  <div id="userListBox">
+    <h4>👥 Users (<span id="userCount">0</span>)</h4>
+    <ul id="userList"></ul>
   </div>
-</div>
 
-<h2>🐍 Snake Game</h2>
-<div class="info">
-  <div>Visitors: <span id="visitorCount">0</span></div>
-  <div>Top Score: <span id="topScore">0</span></div>
-  <div>Your Score: <span id="score">0</span></div>
-</div>
+  <div id="popup">
+    <h2>🍎 Welcome to Snake Game</h2>
+    <p>Enter your username or continue:</p>
+    <input type="text" id="usernameInput" placeholder="Enter username" />
+    <div>
+      <button id="agreeBtn">Agree</button>
+      <button id="cancelBtn">Cancel</button>
+    </div>
+  </div>
 
-<canvas id="game" class="game-canvas" width="500" height="500"></canvas>
+  <div id="game-container">
+    <canvas id="game" width="400" height="400"></canvas>
 
-<!-- Mobile Controls -->
-<div class="controls">
-  <div></div>
-  <div id="up" class="control-btn">⬆️</div>
-  <div></div>
-  <div id="left" class="control-btn">⬅️</div>
-  <div></div>
-  <div id="right" class="control-btn">➡️</div>
-  <div></div>
-  <div id="down" class="control-btn">⬇️</div>
-  <div></div>
-</div>
+    <div class="info">
+      🧍 Visitors: <span id="visitorCount">0</span> | 
+      🏆 Top Score: <span id="topScore">0</span> | 
+      🎯 Your Score: <span id="score">0</span>
+    </div>
 
-<script>
-const canvas = document.getElementById('game');
-const ctx = canvas.getContext('2d');
-const popup = document.getElementById('popup');
-const agreeBtn = document.getElementById('agreeBtn');
-const cancelBtn = document.getElementById('cancelBtn');
-const usernameInput = document.getElementById('usernameInput');
-const menuBtn = document.getElementById('menuBtn');
-const userListBox = document.getElementById('userListBox');
+    <div class="controls">
+      <div><div class="arr" id="up">⬆️</div></div>
+      <div>
+        <div class="arr" id="left">⬅️</div>
+        <div class="arr" id="down">⬇️</div>
+        <div class="arr" id="right">➡️</div>
+      </div>
+    </div>
+  </div>
 
-let username = null;
+  <script>
+    const canvas = document.getElementById('game');
+    const ctx = canvas.getContext('2d');
+    const popup = document.getElementById('popup');
+    const agreeBtn = document.getElementById('agreeBtn');
+    const cancelBtn = document.getElementById('cancelBtn');
+    const usernameInput = document.getElementById('usernameInput');
+    const menuBtn = document.getElementById('menuBtn');
+    const userListBox = document.getElementById('userListBox');
 
-// Popup
-agreeBtn.addEventListener('click', () => {
-  username = usernameInput.value.trim();
-  if (!username) username = "User" + Math.floor(Math.random() * 10000);
-  addUser(username);
-  popup.style.display = "none";
-  startGame();
-});
-cancelBtn.addEventListener('click', () => {
-  alert("❌ You cancelled the game.");
-  popup.style.display = "none";
-});
-menuBtn.addEventListener('click', () => {
-  userListBox.style.display = (userListBox.style.display === "none" || userListBox.style.display === "") ? "block" : "none";
-});
+    let username = null;
 
-// === USER SYSTEM ===
-if(!localStorage.getItem('users')) localStorage.setItem('users', JSON.stringify([]));
-
-function addUser(name){
-  let users = JSON.parse(localStorage.getItem('users'));
-  if(!users.includes(name)) users.push(name);
-  localStorage.setItem('users', JSON.stringify(users));
-  updateUserList();
-}
-
-function updateUserList(){
-  const users = JSON.parse(localStorage.getItem('users'));
-  document.getElementById('userList').innerHTML = users.map(u => `<li>${u}</li>`).join('');
-  document.getElementById('userCount').textContent = users.length;
-}
-updateUserList();
-
-// === GAME VARIABLES ===
-const scale = 25;
-const rows = canvas.height / scale;
-const cols = canvas.width / scale;
-let snake = [{x:10*scale, y:10*scale}];
-let food = {x:Math.floor(Math.random()*cols)*scale, y:Math.floor(Math.random()*rows)*scale};
-let dx = scale, dy = 0;
-let score = 0, baseSpeed = 3, maxSpeed = 18, speed = baseSpeed;
-let lastTime = 0;
-
-// === SCORE & VISITORS ===
-if(!localStorage.getItem('visitorCount')) localStorage.setItem('visitorCount', 0);
-let visitorCount = parseInt(localStorage.getItem('visitorCount')) + 1;
-localStorage.setItem('visitorCount', visitorCount);
-document.getElementById('visitorCount').innerText = visitorCount;
-
-if(!localStorage.getItem('topScore')) localStorage.setItem('topScore', 0);
-let topScore = parseInt(localStorage.getItem('topScore'));
-document.getElementById('topScore').innerText = topScore;
-
-// === CONTROLS ===
-window.addEventListener('keydown', e => {
-  if(e.key === 'ArrowUp' && dy === 0){ dx=0; dy=-scale; }
-  else if(e.key === 'ArrowDown' && dy === 0){ dx=0; dy=scale; }
-  else if(e.key === 'ArrowLeft' && dx === 0){ dx=-scale; dy=0; }
-  else if(e.key === 'ArrowRight' && dx === 0){ dx=scale; dy=0; }
-});
-document.getElementById('up').onclick = () => { if(dy===0){dx=0;dy=-scale;} };
-document.getElementById('down').onclick = () => { if(dy===0){dx=0;dy=scale;} };
-document.getElementById('left').onclick = () => { if(dx===0){dx=-scale;dy=0;} };
-document.getElementById('right').onclick = () => { if(dx===0){dx=scale;dy=0;} };
-
-// === GAME LOOP ===
-function startGame(){
-  requestAnimationFrame(loop);
-}
-function loop(timestamp){
-  if(!lastTime) lastTime = timestamp;
-  const interval = 1000 / speed;
-  if(timestamp - lastTime > interval){
-    lastTime = timestamp;
-    update();
-    draw();
-  }
-  requestAnimationFrame(loop);
-}
-
-function update(){
-  let growth = Math.min(score/40,1);
-  speed = baseSpeed + (maxSpeed - baseSpeed)*growth;
-  let head = {x:snake[0].x + dx, y:snake[0].y + dy};
-  if(head.x>=canvas.width) head.x=0;
-  else if(head.x<0) head.x=canvas.width-scale;
-  if(head.y>=canvas.height) head.y=0;
-  else if(head.y<0) head.y=canvas.height-scale;
-
-  if(collision(head, snake)){
-    alert("💀 Game Over! Score: "+score);
-    if(score>topScore){
-      topScore=score;
-      localStorage.setItem('topScore', topScore);
-      document.getElementById('topScore').innerText = topScore;
+    // === USER SYSTEM ===
+    if(!localStorage.getItem('users')) localStorage.setItem('users', JSON.stringify([]));
+    if(!localStorage.getItem('username')) {
+      popup.style.display = "flex";
+    } else {
+      username = localStorage.getItem('username');
+      addUser(username);
+      startGame();
     }
-    snake=[{x:10*scale,y:10*scale}];
-    dx=scale; dy=0; score=0; speed=baseSpeed;
-    document.getElementById('score').innerText=score;
-    return;
-  }
 
-  snake.unshift(head);
-  if(head.x===food.x && head.y===food.y){
-    score++;
-    document.getElementById('score').innerText=score;
-    food={x:Math.floor(Math.random()*cols)*scale, y:Math.floor(Math.random()*rows)*scale};
-  } else snake.pop();
-}
+    agreeBtn.addEventListener('click', () => {
+      username = usernameInput.value.trim();
+      if (!username) username = "User" + Math.floor(Math.random() * 10000);
+      localStorage.setItem('username', username);
+      addUser(username);
+      popup.style.display = "none";
+      startGame();
+    });
 
-function draw(){
-  ctx.fillStyle='#000';
-  ctx.fillRect(0,0,canvas.width,canvas.height);
+    cancelBtn.addEventListener('click', () => {
+      alert("❌ You cancelled the game.");
+      popup.style.display = "none";
+    });
 
-  snake.forEach(p=>{
-    const grad=ctx.createLinearGradient(p.x,p.y,p.x+scale,p.y+scale);
-    grad.addColorStop(0,'#0f0');
-    grad.addColorStop(1,'#070');
-    ctx.fillStyle=grad;
-    ctx.beginPath();
-    ctx.roundRect(p.x,p.y,scale,scale,6);
-    ctx.fill();
-  });
+    menuBtn.addEventListener('click', () => {
+      userListBox.style.display = (userListBox.style.display === "none" || userListBox.style.display === "") ? "block" : "none";
+    });
 
-  const cx=food.x+scale/2, cy=food.y+scale/2, r=scale/2.2;
-  const appleGrad=ctx.createRadialGradient(cx-3,cy-3,2,cx,cy,r);
-  appleGrad.addColorStop(0,'#ff6666');
-  appleGrad.addColorStop(1,'#b30000');
-  ctx.fillStyle=appleGrad;
-  ctx.beginPath();
-  ctx.arc(cx,cy,r,0,Math.PI*2);
-  ctx.fill();
-}
+    function addUser(name){
+      let users = JSON.parse(localStorage.getItem('users'));
+      if(!users.includes(name)) users.push(name);
+      localStorage.setItem('users', JSON.stringify(users));
+      updateUserList();
+    }
 
-function collision(h, arr){
-  for(let i=1;i<arr.length;i++){
-    if(h.x===arr[i].x && h.y===arr[i].y) return true;
-  }
-  return false;
-}
-</script>
+    function updateUserList(){
+      const users = JSON.parse(localStorage.getItem('users'));
+      document.getElementById('userList').innerHTML = users.map(u => `<li>${u}</li>`).join('');
+      document.getElementById('userCount').textContent = users.length;
+    }
+    updateUserList();
+
+    // === GAME VARIABLES ===
+    const scale = 25;
+    const rows = canvas.height / scale;
+    const cols = canvas.width / scale;
+    let snake = [{x:10*scale, y:10*scale}];
+    let food = {x:Math.floor(Math.random()*cols)*scale, y:Math.floor(Math.random()*rows)*scale};
+    let dx = scale, dy = 0;
+    let score = 0, baseSpeed = 3, maxSpeed = 18, speed = baseSpeed;
+    let lastTime = 0;
+
+    // === SCORE & VISITORS ===
+    if(!localStorage.getItem('visitorCount')) localStorage.setItem('visitorCount', 0);
+    let visitorCount = parseInt(localStorage.getItem('visitorCount')) + 1;
+    localStorage.setItem('visitorCount', visitorCount);
+    document.getElementById('visitorCount').innerText = visitorCount;
+
+    if(!localStorage.getItem('topScore')) localStorage.setItem('topScore', 0);
+    let topScore = parseInt(localStorage.getItem('topScore'));
+    document.getElementById('topScore').innerText = topScore;
+
+    // === CONTROLS ===
+    window.addEventListener('keydown', e => {
+      if(e.key === 'ArrowUp' && dy === 0){ dx=0; dy=-scale; }
+      else if(e.key === 'ArrowDown' && dy === 0){ dx=0; dy=scale; }
+      else if(e.key === 'ArrowLeft' && dx === 0){ dx=-scale; dy=0; }
+      else if(e.key === 'ArrowRight' && dx === 0){ dx=scale; dy=0; }
+    });
+    document.getElementById('up').onclick = () => { if(dy===0){dx=0;dy=-scale;} };
+    document.getElementById('down').onclick = () => { if(dy===0){dx=0;dy=scale;} };
+    document.getElementById('left').onclick = () => { if(dx===0){dx=-scale;dy=0;} };
+    document.getElementById('right').onclick = () => { if(dx===0){dx=scale;dy=0;} };
+
+    // === GAME LOOP ===
+    function startGame(){
+      requestAnimationFrame(loop);
+    }
+    function loop(timestamp){
+      if(!lastTime) lastTime = timestamp;
+      const interval = 1000 / speed;
+      if(timestamp - lastTime > interval){
+        lastTime = timestamp;
+        update();
+        draw();
+      }
+      requestAnimationFrame(loop);
+    }
+
+    function update(){
+      let growth = Math.min(score/40,1);
+      speed = baseSpeed + (maxSpeed - baseSpeed)*growth;
+      let head = {x:snake[0].x + dx, y:snake[0].y + dy};
+      if(head.x>=canvas.width) head.x=0;
+      else if(head.x<0) head.x=canvas.width-scale;
+      if(head.y>=canvas.height) head.y=0;
+      else if(head.y<0) head.y=canvas.height-scale;
+
+      if(collision(head, snake)){
+        alert("💀 Game Over! Score: "+score);
+        if(score>topScore){
+          topScore=score;
+          localStorage.setItem('topScore', topScore);
+          document.getElementById('topScore').innerText = topScore;
+        }
+        snake=[{x:10*scale,y:10*scale}];
+        dx=scale; dy=0; score=0; speed=baseSpeed;
+        document.getElementById('score').innerText=score;
+        return;
+      }
+
+      snake.unshift(head);
+      if(head.x===food.x && head.y===food.y){
+        score++;
+        document.getElementById('score').innerText=score;
+        food={x:Math.floor(Math.random()*cols)*scale, y:Math.floor(Math.random()*rows)*scale};
+      } else snake.pop();
+    }
+
+    function draw(){
+      ctx.fillStyle='#000';
+      ctx.fillRect(0,0,canvas.width,canvas.height);
+
+      snake.forEach(p=>{
+        const grad=ctx.createLinearGradient(p.x,p.y,p.x+scale,p.y+scale);
+        grad.addColorStop(0,'#0f0');
+        grad.addColorStop(1,'#070');
+        ctx.fillStyle=grad;
+        ctx.beginPath();
+        ctx.roundRect(p.x,p.y,scale,scale,6);
+        ctx.fill();
+      });
+
+      const cx=food.x+scale/2, cy=food.y+scale/2, r=scale/2.2;
+      const appleGrad=ctx.createRadialGradient(cx-3,cy-3,2,cx,cy,r);
+      appleGrad.addColorStop(0,'#ff6666');
+      appleGrad.addColorStop(1,'#b30000');
+      ctx.fillStyle=appleGrad;
+      ctx.beginPath();
+      ctx.arc(cx,cy,r,0,Math.PI*2);
+      ctx.fill();
+    }
+
+    function collision(h, arr){
+      for(let i=1;i<arr.length;i++){
+        if(h.x===arr[i].x && h.y===arr[i].y) return true;
+      }
+      return false;
+    }
+  </script>
 </body>
 </html>
