--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>snake game made by - nirob</title>
+  <title>Snake Game 🍎 by Kakashi</title>
   <style>
     body {
       margin: 0;
@@ -88,7 +88,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.8);
+      background: rgba(0, 0, 0, 0.85);
       display: none;
       align-items: center;
       justify-content: center;
@@ -171,6 +171,7 @@
 
     // === USER SYSTEM ===
     if(!localStorage.getItem('users')) localStorage.setItem('users', JSON.stringify([]));
+
     if(!localStorage.getItem('username')) {
       popup.style.display = "flex";
     } else {
@@ -194,7 +195,8 @@
     });
 
     menuBtn.addEventListener('click', () => {
-      userListBox.style.display = (userListBox.style.display === "none" || userListBox.style.display === "") ? "block" : "none";
+      userListBox.style.display =
+        userListBox.style.display === "block" ? "none" : "block";
     });
 
     function addUser(name){
